tests/snapshots/cli__run_metal_help.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/run_metal_help.bend
---
Compiles the program and runs it with the Metal HVM implementation

Usage: bend run-metal [OPTIONS] <PATH> [ARGUMENTS]...

Arguments:
  <PATH>
          Path to the input file

  [ARGUMENTS]...
          

Options:
  -p
          Debug and normalization pretty printing

  -l
          Linear readback (show explicit dups)

  -s, --stats
          Shows runtime stats and rewrite counts

  -O <COMP_OPTS>
          Enables or disables the given optimizations
              float_combinators is enabled by default on strict mode.
          
          [possible values: all, no-all, eta, no-eta, prune, no-prune, linearize-matches, linearize-matches-alt, no-linearize-matches, float-combinators, no-float-combinators, merge, no-merge, inline, no-inline, check-net-size, no-check-net-size, adt-scott, adt-num-scott, type-check, no-type-check]

  -W, --warn <WARNS>
          Show the specified compilation warning
          
          [possible values: all, irrefutable-match, redundant-match, unreachable-match, unused-definition, repeated-bind, recursion-cycle, import-shadow, missing-main]

  -D, --deny <DENIES>
          Deny the specified compilation warning
          
          [possible values: all, irrefutable-match, redundant-match, unreachable-match, unused-definition, repeated-bind, recursion-cycle, import-shadow, missing-main]

  -A, --allow <ALLOWS>
          Allow the specified compilation warning
          
          [possible values: all, irrefutable-match, redundant-match, unreachable-match, unused-definition, repeated-bind, recursion-cycle, import-shadow, missing-main]

  -v, --verbose
          

      --hvm-bin <HVM_BIN>
          HVM command or path to HVM binary

  -e, --entrypoint <ENTRYPOINT>
          Use other entrypoint rather than main or Main

  -h, --help
          Print help (see a summary with '-h')
